# test

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  CONTRIBUTING.md  Dockerfile.audit  Makefile  QUICKSTART.md  README.md  STRUCTURE.md  docker-compose.yml  eslint.config.js  go.mod  go.sum  go.work  package-lock.json  package.json  playwright.config.ts  pyproject.toml  requirements.txt
.github/workflows/: backend-go.yml  backend-python.yml  frontend-web.yml
app/: layout.tsx  page.tsx
apps/: README.md
apps/backend/python/: Dockerfile  README.md  pyproject.toml
apps/backend/python/src/audit_service/: __init__.py  main.py
apps/backend/python/tests/: test_health.py
cmd/server/: main.go
components/: AboutSection.tsx  BlogSection.tsx  Card.tsx  ContactForm.tsx  ContactSection.tsx  Footer.tsx  Header.tsx  Hero.tsx  ProjectsSection.tsx  ResumeSection.tsx  Section.tsx
config/logging/: fluentd.conf  logging.yaml
config/monitoring/: alertmanager.yml  compliance_rules.yml  prometheus.yml  security_rules.yml
config/security/: encryption-policy.yaml  secrets-rotation-policy.md
data/: about.ts  posts.ts  projects.ts  resume.ts
docs/: ARCHITECTURE.md  DEVELOPMENT_GUIDE.md  MIGRATION_NOTES.md  WORKFLOWS.md  openapi.yaml
docs/adr/: 001-monorepo-structure.md  002-service-boundaries.md  README.md
docs/compliance/: incident-response-plan.md  kyc-aml-program.md  security-policies.md  soc2-ready-narrative.md
docs/operations/: kubernetes-platform-bootstrap.md  monitoring-and-alerting.md  security-runbook.md  vulnerability-management.md  ws-realtime-runbook.md
frontend/: README.md  cypress.config.ts  index.html  jest.config.js  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  setupTests.ts
infrastructure/: docker-compose.yml
infrastructure/kubernetes/: ARCHITECTURE.md  DEPLOYMENT_CHECKLIST.md  IAM_SETUP.md  Makefile  QUICKSTART.md  README.md  helmfile.yaml
infrastructure/terraform/: main.tf
internal/auth/: jwt.go  jwt_test.go  mfa.go  password.go  password_test.go
internal/config/: config.go
internal/database/: database.go  migrations.go
internal/models/: session.go  user.go
scripts/: demo_all_services.py  run_audit_demo.py  run_vulnerability_scan.sh  secrets_rotation_job.py  setup-iam-roles.sh
src/: App.tsx  index.css  main.tsx
tests/: README.md  test_audit_logger.py  test_kyc_service.py  test_rbac.py
types/: index.ts
(+178 files in other folders)
