[tool.poetry]
name = "security-compliance-framework"
version = "0.1.0"
description = "Security, compliance, and auditing framework"
authors = ["Security Team <security@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
structlog = "~=23.1"
prometheus-client = "~=0.19"
requests = "~=2.31"
cryptography = "~=41.0"
PyYAML = "~=6.0"
python-json-logger = "~=2.0"
python-dotenv = "~=1.0"
pydantic = "~=2.5"
psycopg2-binary = "~=2.9"
redis = "~=5.0"
hvac = "~=2.0"
boto3 = "~=1.34"
opentelemetry-api = "~=1.21"
opentelemetry-sdk = "~=1.21"
opentelemetry-instrumentation = "~=0.42b0"
jaeger-client = "~=4.8"

[tool.poetry.group.dev.dependencies]
pytest = "~=7.4"
pytest-cov = "~=4.1"
pytest-asyncio = "~=0.21"
black = "~=23.12"
flake8 = "~=6.1"
mypy = "~=1.7"
bandit = "~=1.7"
safety = "~=2.3"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
