[tool.poetry]
name = "backend-python-services"
version = "0.1.0"
description = "Python microservices for the monorepo"
authors = ["Team <team@example.com>"]
packages = [
    { include = "audit_service", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
structlog = "~=23.1"
prometheus-client = "~=0.19"
requests = "~=2.31"
cryptography = "~=41.0"
PyYAML = "~=6.0"
python-json-logger = "~=2.0"
python-dotenv = "~=1.0"
pydantic = "~=2.5"
psycopg2-binary = "~=2.9"
redis = "~=5.0"
hvac = "~=2.0"
boto3 = "~=1.34"
opentelemetry-api = "~=1.21"
opentelemetry-sdk = "~=1.21"
opentelemetry-instrumentation = "~=0.42b0"
jaeger-client = "~=4.8"
fastapi = "~=0.108"
uvicorn = "~=0.25"

[tool.poetry.group.dev.dependencies]
pytest = "~=7.4"
pytest-cov = "~=4.1"
pytest-asyncio = "~=0.21"
black = "~=23.12"
ruff = "~=0.1"
mypy = "~=1.7"
bandit = "~=1.7"
safety = "~=2.3"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "--cov --cov-report=html --cov-report=term-missing"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
